--- a/login/index.html
+++ b/login/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThinkWyse</title>
+    <title>Login - ThinkWyse</title>
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,12 +45,12 @@
                 <div class="signup-page-inside">
                     <div class="header">
                         <h2>
-                            Sign-up now - You're just one click away from success
+                           Log in to your account
                         </h2>
                         <div class="google-container">
                             <a href="#" id="google-signin-button">
                                 <img src="../assets/images/google-img.png" alt="Google Logo">
-                                <span>Sign up with your Google account</span>
+                                <span>Continue with your Google account</span>
                             </a>
                         </div>
                         <div class="separator">
@@ -61,14 +61,11 @@
                         <div class="signup-container">
                             <form action="">
                                 <input type="text" class="signup-input" placeholder="name@company.com">
-                                <button class="signup-button">Get Started</button>
+                                <button class="signup-button">Continue</button>
                             </form>                            
                         </div>
                         <p class="signup-agreement-text">
-                            By signing up, I agree to the ThinkWyse <a href="https://thinkwyse.morganserver.com/privacy-policy/">Privacy Policy</a> and <a href="https://thinkwyse.morganserver.com/terms-of-service/">Terms of Service</a>.
-                        </p>
-                        <p class="signup-agreement-text">
-                            Already have an account? <a href="../login/">Log in</a>
+                            Don't have an account yet? <a href="../signup/">Sign up</a>
                         </p>
                     </div>
                 </div>
